--- a/cfu-data-types.ipynb
+++ b/cfu-data-types.ipynb
@@ -49,11 +49,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "#personal_info = name (str), adresse(str), age(int), salary(float), expensens(float)\n",
+    "\n",
+    "# calc = money left salary - expenses (round(1))\n",
+    "\n",
+    "# if calc > 500, = True\n",
+    "# else: False\n",
+    "\n",
+    "# print f' message(str) name{name}, who is {age} years young, and lives in {adresse} has {money left} from his {salary} after {expenses}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Robert K 123 Street, London 38 4854.75 1857.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_name = input(\"Please enter your personal information: name\")\n",
+    "user_adress = input(\"Please enter your personal information: adress\")\n",
+    "user_age = int(input(\"Please enter your personal information: age\"))\n",
+    "user_salary = float(input(\"Please enter your personal information: montly salary\"))\n",
+    "user_expenses = float(input(\"Please enter your personal information: expenses\"))\n",
+    "\n",
+    "print(user_name, user_adress, user_age, user_salary, user_expenses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2997.7"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remaining_salary = round(user_salary - user_expenses, 1)\n",
+    "\n",
+    "remaining_salary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check500 = calc_eom > 500"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Robert K, who is 38 years young, and lives in 123 Street, London has 2997.7 € left from his salary after 1857.1 € expenses. It is True that he has more than $500 left.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f' {user_name}, who is {user_age} years young, and lives in {user_adress} has {remaining_salary} € left from his salary after {user_expenses} € expenses. It is {check500} that he has more than $500 left.')\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -85,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,17 +183,189 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "245"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(poem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'From what I’ve tasted of desire\\nI hold with those who favor fire'"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poem[54:-127]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Some say the world will end in fire \n",
+      "Some say in ice \n",
+      "From what I ve tasted of desire\n",
+      "I hold with those who favor fire \n",
+      "But if it had to perish twice \n",
+      "I think I know enough of hate\n",
+      "To say that for destruction ice\n",
+      "Is also great\n",
+      "And would suffice \n"
+     ]
+    }
+   ],
+   "source": [
+    "poem_replaced = poem.replace(\",\", \" \").replace(\".\", \" \" ).replace(\"’\", \" \" ) \n",
+    "print(poem_replaced) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "some say the world will end in fire,\n",
+      "some say in ice.\n",
+      "from what i’ve tasted of desire\n",
+      "i hold with those who favor fire.\n",
+      "but if it had to perish twice,\n",
+      "i think i know enough of hate\n",
+      "to say that for destruction ice\n",
+      "is also great\n",
+      "and would suffice.\n"
+     ]
+    }
+   ],
+   "source": [
+    "lowercase = poem.lower()\n",
+    "print(lowercase)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Some say the world will end in fire,\\nSome say in ice.\\nFrom what I’ve tasted of desire\\nI hold with those who favor fire.\\nBut if it had to perish twice,\\nI think I know enough of hate\\nTo say that for destruction ice\\nIs also great\\nAnd would suffice.python is awesome!'"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add = \"python is awesome!\"\n",
+    "\n",
+    "new_poem = poem + add\n",
+    "\n",
+    "new_poem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "263"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(new_poem)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Some say the world will end in fire',\n",
+       " '\\nSome say in ice.\\nFrom what I’ve tasted of desire\\nI hold with those who favor fire.\\nBut if it had to perish twice',\n",
+       " '\\nI think I know enough of hate\\nTo say that for destruction ice\\nIs also great\\nAnd would suffice.python is awesome!']"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "new_poem.split(\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Some say the world will end in fire',\n",
+       "  '\\nSome say in ice.\\nFrom what I’ve tasted of desire\\nI hold with those who favor fire.\\nBut if it had to perish twice',\n",
+       "  '\\nI think I know enough of hate\\nTo say that for destruction ice\\nIs also great\\nAnd would suffice.python is awesome!']]"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poem_list = [new_poem.split(\",\")]\n",
+    "poem_list"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -126,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
