lab data types extra solved v2

--- a/cfu-data-types.ipynb
+++ b/cfu-data-types.ipynb
@@ -66,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Robert K 123 Street, London 38 4854.75 1857.1\n"
+      "Robert K 123 Street, London 38 348509.0 1234.94\n"
      ]
     }
    ],
@@ -89,16 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2997.7"
+       "347274.1"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,23 +111,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "check500 = calc_eom > 500"
+    "check500 = remaining_salary > 500"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Robert K, who is 38 years young, and lives in 123 Street, London has 2997.7 € left from his salary after 1857.1 € expenses. It is True that he has more than $500 left.\n"
+      " Robert K, who is 38 years young, and lives in 123 Street, London has 347274.1 € left from his salary after 1234.94 € expenses. It is True that he has more than $500 left.\n"
      ]
     }
    ],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "245"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "'From what I’ve tasted of desire\\nI hold with those who favor fire'"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,68 +223,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Some say the world will end in fire \n",
-      "Some say in ice \n",
-      "From what I ve tasted of desire\n",
-      "I hold with those who favor fire \n",
-      "But if it had to perish twice \n",
-      "I think I know enough of hate\n",
-      "To say that for destruction ice\n",
-      "Is also great\n",
-      "And would suffice \n"
+      "Some say the world will end in fire Some say in ice From what I ve tasted of desire I hold with those who favor fire But if it had to perish twice I think I know enough of hate To say that for destruction ice Is also great And would suffice \n"
      ]
     }
    ],
    "source": [
-    "poem_replaced = poem.replace(\",\", \" \").replace(\".\", \" \" ).replace(\"’\", \" \" ) \n",
+    "poem_replaced = poem.replace(\",\", \" \").replace(\".\", \" \" ).replace(\"’\", \" \" ).replace(\"\\n\", \" \" ).replace(\"  \", \" \" ) \n",
     "print(poem_replaced) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "some say the world will end in fire,\n",
-      "some say in ice.\n",
-      "from what i’ve tasted of desire\n",
-      "i hold with those who favor fire.\n",
-      "but if it had to perish twice,\n",
-      "i think i know enough of hate\n",
-      "to say that for destruction ice\n",
-      "is also great\n",
-      "and would suffice.\n"
+      "some say the world will end in fire some say in ice from what i ve tasted of desire i hold with those who favor fire but if it had to perish twice i think i know enough of hate to say that for destruction ice is also great and would suffice \n"
      ]
     }
    ],
    "source": [
-    "lowercase = poem.lower()\n",
-    "print(lowercase)"
+    "poem_lowercase = poem_replaced.lower()\n",
+    "print(poem_lowercase)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Some say the world will end in fire,\\nSome say in ice.\\nFrom what I’ve tasted of desire\\nI hold with those who favor fire.\\nBut if it had to perish twice,\\nI think I know enough of hate\\nTo say that for destruction ice\\nIs also great\\nAnd would suffice.python is awesome!'"
+       "'some say the world will end in fire some say in ice from what i ve tasted of desire i hold with those who favor fire but if it had to perish twice i think i know enough of hate to say that for destruction ice is also great and would suffice python is awesome!'"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,23 +276,43 @@
    "source": [
     "add = \"python is awesome!\"\n",
     "\n",
-    "new_poem = poem + add\n",
+    "new_poem = poem_lowercase + add\n",
     "\n",
     "new_poem"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "263"
+       "'some say the world will end in fire some say in ice from what i ve tasted of desire i hold with those who favor fire but if it had to perish twice i think i know enough of hate to say that for destruction ice is also great and would suffice python is awesome!'"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_poem.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "259"
+      ]
+     },
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,46 +323,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Some say the world will end in fire',\n",
-       " '\\nSome say in ice.\\nFrom what I’ve tasted of desire\\nI hold with those who favor fire.\\nBut if it had to perish twice',\n",
-       " '\\nI think I know enough of hate\\nTo say that for destruction ice\\nIs also great\\nAnd would suffice.python is awesome!']"
+       "['some',\n",
+       " 'say',\n",
+       " 'the',\n",
+       " 'world',\n",
+       " 'will',\n",
+       " 'end',\n",
+       " 'in',\n",
+       " 'fire',\n",
+       " 'some',\n",
+       " 'say',\n",
+       " 'in',\n",
+       " 'ice',\n",
+       " 'from',\n",
+       " 'what',\n",
+       " 'i',\n",
+       " 've',\n",
+       " 'tasted',\n",
+       " 'of',\n",
+       " 'desire',\n",
+       " 'i',\n",
+       " 'hold',\n",
+       " 'with',\n",
+       " 'those',\n",
+       " 'who',\n",
+       " 'favor',\n",
+       " 'fire',\n",
+       " 'but',\n",
+       " 'if',\n",
+       " 'it',\n",
+       " 'had',\n",
+       " 'to',\n",
+       " 'perish',\n",
+       " 'twice',\n",
+       " 'i',\n",
+       " 'think',\n",
+       " 'i',\n",
+       " 'know',\n",
+       " 'enough',\n",
+       " 'of',\n",
+       " 'hate',\n",
+       " 'to',\n",
+       " 'say',\n",
+       " 'that',\n",
+       " 'for',\n",
+       " 'destruction',\n",
+       " 'ice',\n",
+       " 'is',\n",
+       " 'also',\n",
+       " 'great',\n",
+       " 'and',\n",
+       " 'would',\n",
+       " 'suffice',\n",
+       " 'python',\n",
+       " 'is',\n",
+       " 'awesome!']"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_poem.split(\",\")"
+    "new_poem.split(\" \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['Some say the world will end in fire',\n",
-       "  '\\nSome say in ice.\\nFrom what I’ve tasted of desire\\nI hold with those who favor fire.\\nBut if it had to perish twice',\n",
-       "  '\\nI think I know enough of hate\\nTo say that for destruction ice\\nIs also great\\nAnd would suffice.python is awesome!']]"
+       "[['some',\n",
+       "  'say',\n",
+       "  'the',\n",
+       "  'world',\n",
+       "  'will',\n",
+       "  'end',\n",
+       "  'in',\n",
+       "  'fire',\n",
+       "  'some',\n",
+       "  'say',\n",
+       "  'in',\n",
+       "  'ice',\n",
+       "  'from',\n",
+       "  'what',\n",
+       "  'i',\n",
+       "  've',\n",
+       "  'tasted',\n",
+       "  'of',\n",
+       "  'desire',\n",
+       "  'i',\n",
+       "  'hold',\n",
+       "  'with',\n",
+       "  'those',\n",
+       "  'who',\n",
+       "  'favor',\n",
+       "  'fire',\n",
+       "  'but',\n",
+       "  'if',\n",
+       "  'it',\n",
+       "  'had',\n",
+       "  'to',\n",
+       "  'perish',\n",
+       "  'twice',\n",
+       "  'i',\n",
+       "  'think',\n",
+       "  'i',\n",
+       "  'know',\n",
+       "  'enough',\n",
+       "  'of',\n",
+       "  'hate',\n",
+       "  'to',\n",
+       "  'say',\n",
+       "  'that',\n",
+       "  'for',\n",
+       "  'destruction',\n",
+       "  'ice',\n",
+       "  'is',\n",
+       "  'also',\n",
+       "  'great',\n",
+       "  'and',\n",
+       "  'would',\n",
+       "  'suffice',\n",
+       "  'python',\n",
+       "  'is',\n",
+       "  'awesome!']]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "poem_list = [new_poem.split(\",\")]\n",
+    "poem_list = [new_poem.split(\" \")]\n",
     "poem_list"
    ]
   }
